@@ -1,0 +1,5 @@
+Junk,Junk,Junk,Junk
+Org,No hashtag,Province,Number affected
+#org,,#adm1,#affected
+Org X,xxx,Coast, 100
+Org Y,yyy,Mountains, 200
